[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "pyragit"
dist-name = "pyragit"
author = "Holger Frey"
author-email = "mail@holgerfrey.de"
home-page = "https://github.com/holgi/pyragit"
description-file = "README.md"
license = "Beerware"

# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Freely Distributable",
]

requires = [
    'mistune',
    'mistune-contrib',
    'plaster_pastedeploy',
    'paste',
    'pygments',
    'pyramid',
    'pyramid_debugtoolbar',
    'pyramid_jinja2',
    'waitress',
]
requires-python = ">=3.6.9"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.0.0",
    "pytest-cov",
    "pytest-mock",
    "beautifulsoup4",
    "WebTest >= 1.3.1",  # py3 compat
]
dev = [
    "black",
    "flake8",
    "flake8-comprehensions",
    "isort",
    "keyring",
    "pre-commit",
]

[tool.black]
line-length = 79
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
line_length=79
multi_line_output=3
length_sort="True"
include_trailing_comma="True"
