[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "pyragit"
authors = [
    {name = "Holger Frey", email = "mail@holgerfrey.de"},
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]
license = {text = "Beerware"}


# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "License :: Freely Distributable",
]

dependencies = [
    'mistune',
    'mistune-contrib',
    'plaster_pastedeploy',
    'paste',
    'pygments',
    'pygit2<1.9',
    'pyramid',
    'pyramid_debugtoolbar',
    'pyramid_jinja2',
    'waitress',
]

[project.optional-dependencies]
test = [
    "pytest >=4.0.0",
    "pytest-cov",
    "pytest-mock",
    "beautifulsoup4",
    "WebTest >= 1.3.1",  # py3 compat
]
dev = [
    "black",
    "flake8",
    "flake8-comprehensions",
    "isort >= 5.0.0",
    "keyring",
    "pre-commit",
]

[project.urls]
Documentation = "https://github.com/holgi/pyragit"
Source = "https://github.com/holgi/pyragit"

[project.entry-points."paste.app_factory"]
main = "pyragit:main"

[tool.black]
line-length = 79
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
line_length=79
multi_line_output=3
length_sort="True"
include_trailing_comma="True"
